--- a/GitBuddy.csproj
+++ b/GitBuddy.csproj
@@ -2,17 +2,28 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.0.1</Version>
-    <TargetFramework>net8.0</TargetFramework>
+    <Version>1.0.2</Version>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>$(NoWarn);CS8618;CS8604;CS8619;CS8602;CS8603;CA1416</NoWarn>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>buddy</ToolCommandName>
+    <PackageId>Nivobi.GitBuddy</PackageId> 
+    <PackageIcon>icon.png</PackageIcon>
+    <Authors>Nivobi</Authors>
+    <Description>Focus on coding, let GitBuddy handle the chores.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.54.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.53.1" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="10.0.2" />
+    <None Include="icon.png" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
